--- a/playbooks/temp_check.yml
+++ b/playbooks/temp_check.yml
@@ -4,8 +4,8 @@
   gather_facts: false
 #  become: true
 
-  vars:
-    ansible_user: nur
+#  vars:
+#   ansible_user: nur
 
   tasks:
     - name: Run Temp Check Script
