--- a/playbooks/temp_check.yml
+++ b/playbooks/temp_check.yml
@@ -2,10 +2,7 @@
 - name: Run Temp Check Script
   hosts: all
   gather_facts: false
-#  become: true
-
-#  vars:
-#   ansible_user: nur
+  become: true
 
   tasks:
     - name: Run Temp Check Script
