--- a/playbooks/temp_check.yml
+++ b/playbooks/temp_check.yml
@@ -8,7 +8,8 @@
     - name: Run Temp Check Script
       shell: vcgencmd measure_temp
       register: script_output
+      changed_when: false  # Mark the task as unchanged, even if the command returns a non-zero exit code
 
     - name: Display Script Output
       debug:
-        var: script_output.stdout_lines
+        var: script_output.stdout | string  # Convert the stdout value to a string
